src/objects/Pack4_CSP__c.object
<CustomObject>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hierarchy Level</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Hierarchy_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Hierarchy Level</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_LastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Territory_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Territory Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Territory_Hierarchy_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Territory Hierarchy Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Territory_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Territory Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Role_Audit_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(R22.4) CRM-(753) This field provides the value of the Sales_Role_Audit__c field status  “Active__c” in the Pack4_CSP__c object</description>
        <label>Sales Role Audit Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Role_Audit_Id__c</fullName>
        <description>(R22.4) CRM-(753) This field provides the value of the Sales_Role_Audit__c field “Id” in the Pack4_CSP__c object</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Sales Role Audit Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Role_Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Role Audit</label>
        <referenceTo>Sales_Role_Audit__c</referenceTo>
        <relationshipLabel>Pack4-CSP</relationshipLabel>
        <relationshipName>Pack4_CSP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Territory Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Territory_Hierarchy_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Territory Hierarchy Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Territory Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pack4_CSP</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pack4-CSP</label>
    <nameField>
        <displayFormat>ABC-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pack4-CSP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>